Refs #56547 fix header items alignment

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -281,6 +281,13 @@ header {
             }
           }
         }
+
+        &.btn {
+          &:focus::before,
+          &:hover::before {
+            display: none;
+          }
+        }
       }
 
       &.show {
